--- a/dashboard.html
+++ b/dashboard.html
@@ -95,6 +95,7 @@
       <button onclick="window.location.href='todays_workout.html'">Today's Workout</button>
       <button onclick="window.location.href='workout_plan.html'">Add plans</button>
       <button onclick="window.location.href='view_plan.html'">View Plans</button>
+      <button onclick="window.location.href='score.html'">Scoreboard</button>
     </div>
 
     <!-- Logout button -->
